--- a/src/Shared/appsettings.shared.Development.json
+++ b/src/Shared/appsettings.shared.Development.json
@@ -1,12 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "ElasticSearch.Apm": "Debug"
-    }
-  },
-  "AllowedHosts": "*",
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
@@ -17,8 +9,8 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
+        "Microsoft": "Debug",
+        "System": "Debug"
       }
     },
     "WriteTo": [
@@ -26,17 +18,17 @@
         "Name": "Console",
         "Args": {
           "outputTemplate": "[{Timestamp:HH:mm:ss} {SourceContext} [{Level}] {Message}{NewLine}{Exception}",
-          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::literate"
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Sixteen, Serilog.Sinks.Console"
         }
       },
       {
-        "Name": "ElasticSearch",
+        "Name": "Elasticsearch",
         "Args": {
-          "bootstrapMethod": "bootstrapMethod",
+          "bootstrapMethod": "Failure",
           "nodes": [
             "http://localhost:18523"
           ],
-          "dataStream": "log-dotnet"
+          "dataStream": "logs-dotnet-default"
         }
       }
     ],
@@ -66,5 +58,13 @@
   },
   "ElasticSearch": {
     "Url": "http://localhost:9200"
-  }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "ElasticSearch.Apm": "Debug"
+    }
+  },
+  "AllowedHosts": "*"
 }
