--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -27,7 +27,7 @@ services:
     image: kibana:8.18.0
     container_name: kibana
     environment:
-      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+      ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'
     ports:
       - "5601:5601"
     depends_on:
