--- a/src/AcademicService/AcademicService.Application/AcademicService.Application.csproj
+++ b/src/AcademicService/AcademicService.Application/AcademicService.Application.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Elastic.Serilog.Sinks" Version="8.12.3" />
       <PackageReference Include="EntityFrameworkCore.Exceptions.PostgreSQL" Version="8.1.3" />
       <PackageReference Include="FluentResults" Version="3.16.0" />
       <PackageReference Include="FluentValidation" Version="11.11.0" />
