--- a/src/AcademicService/AcademicService.Infrastructure/AcademicService.Infrastructure.csproj
+++ b/src/AcademicService/AcademicService.Infrastructure/AcademicService.Infrastructure.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="8.2.1" />
+      <PackageReference Include="Elastic.Serilog.Sinks" Version="8.12.3" />
       <PackageReference Include="EntityFrameworkCore.Exceptions.PostgreSQL" Version="8.1.3" />
       <PackageReference Include="FluentValidation" Version="11.11.0" />
       <PackageReference Include="Gridify.EntityFramework" Version="2.16.3" />
