--- a/src/FalcultyItService/FacultyItService.Api/FacultyItService.Api.csproj
+++ b/src/FalcultyItService/FacultyItService.Api/FacultyItService.Api.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Elastic.Serilog.Sinks" Version="8.12.3" />
         <PackageReference Include="EntityFrameworkCore.Exceptions.PostgreSQL" Version="8.1.3" />
         <PackageReference Include="FluentValidation" Version="11.11.0" />
         <PackageReference Include="Gridify.EntityFramework" Version="2.16.3" />
