--- a/src/AcademicService/AcademicService.Api/AcademicService.Api.csproj
+++ b/src/AcademicService/AcademicService.Api/AcademicService.Api.csproj
@@ -24,7 +24,9 @@
         <PackageReference Include="NSwag.AspNetCore" Version="14.3.0" />
         <PackageReference Include="Serilog" Version="4.2.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+        <PackageReference Include="Serilog.Enrichers.Context" Version="4.6.5" />
         <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+        <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
         <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
         <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1" />
