--- a/src/FalcultyItService/FacultyService.Domain/FacultyService.Domain.csproj
+++ b/src/FalcultyItService/FacultyService.Domain/FacultyService.Domain.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>FacultyItService.Domain</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -17,6 +18,10 @@
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
       <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Aggregate\" />
     </ItemGroup>
 
 </Project>
