--- a/src/FalcultyItService/FacultyService.Infrastructure/FacultyService.Infrastructure.csproj
+++ b/src/FalcultyItService/FacultyService.Infrastructure/FacultyService.Infrastructure.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>FacultyItService.Infrastructure</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
