--- a/src/Shared/appsettings.shared.Development.json
+++ b/src/Shared/appsettings.shared.Development.json
@@ -4,7 +4,10 @@
       "Serilog.Sinks.Console",
       "Serilog.Sinks.File",
       "Serilog.Sinks.Async",
-      "Elastic.Serilog.Sinks"
+      "Elastic.Serilog.Sinks",
+      "Serilog.Enrichers.Environment",
+      "Serilog.Enrichers.Thread",
+      "Serilog.Enrichers.Context"
     ],
     "MinimumLevel": {
       "Default": "Debug",
@@ -52,9 +55,19 @@
     "With": [
       "FromLogContext",
       "WithMachineName",
+      "WithProcessId",
       "WithThreadId",
-      "WithThreadName"
-    ]
+      {
+        "Name": "AtLevel",
+        "Args": {
+          "enrichFromLevel": "Error",
+          "configureEnricher": ["WithThreadName"]
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "AcademicService"
+    }
   },
   "ElasticSearch": {
     "Url": "http://localhost:9200"
