--- a/src/AcademicService/Dockerfile
+++ b/src/AcademicService/Dockerfile
@@ -3,20 +3,30 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /source
 
 # Copy csproj and restore as distinct layers to leverage caching
-COPY *.sln .
-COPY AcademicService.Api/*.csproj ./AcademicService.Api/
-COPY AcademicService.Application/*.csproj ./AcademicService.Application/
-COPY AcademicService.Domain/*.csproj ./AcademicService.Domain/
-COPY AcademicService.Infrastructure/*.csproj ./AcademicService.Infrastructure/
-# TODO: Thêm các dòng COPY *.csproj khác nếu có thêm project
+COPY AcademicService/*.sln .
+COPY AcademicService/AcademicService.Api/*.csproj ./AcademicService.Api/
+COPY AcademicService/AcademicService.Application/*.csproj ./AcademicService.Application/
+COPY AcademicService/AcademicService.Domain/*.csproj ./AcademicService.Domain/
+COPY AcademicService/AcademicService.Infrastructure/*.csproj ./AcademicService.Infrastructure/
+COPY Shared/*.csproj ./Shared/
 
-RUN dotnet restore "AcademicService.sln"
+# Clear NuGet cache and restore Shared project first
+RUN dotnet nuget locals all --clear
+RUN dotnet restore "./Shared/Shared.csproj" --disable-parallel --no-cache
+
+# Then restore the main solution  
+RUN dotnet restore "AcademicService.sln" --disable-parallel --no-cache
 
 # Copy everything else and build app
-COPY . .
-WORKDIR /source/AcademicService.Api
-# Ensure the output path matches the copy destination in the next stage
-RUN dotnet publish -c Release -o /app/publish --no-restore
+COPY AcademicService/ ./AcademicService/
+COPY Shared/ ./Shared/
+WORKDIR /source/AcademicService/AcademicService.Api
+
+# Copy Docker-specific appsettings
+COPY AcademicService/AcademicService.Api/appsettings.Docker.json ./appsettings.Docker.json
+
+# Build and publish
+RUN dotnet publish -c Release -o /app/publish --verbosity normal
 
 # Stage 2: Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
