--- a/src/ApiGateway/appsettings.Development.json
+++ b/src/ApiGateway/appsettings.Development.json
@@ -11,18 +11,21 @@
     "Endpoints": {
       "Http": {
         "Url": "http://localhost:5000"
-      },
-      "Https": {
-        "Url": "https://localhost:5001"
       }
     }
+  },
+  "KeyCloak": {
+    "Authority": "http://localhost:25352/realms/dsms",
+    "Audience": "account",
+    "RequireHttpsMetadata": false
   },
   "Finbuckle:MultiTenant:Stores:ConfigurationStore": {
     "Defaults": {
       "Location": {
         "Public": "",
         "Private": ""
-      },
+      }
+    },
       "Tenants": [
         {
           "Id": "CNTT",
@@ -43,6 +46,5 @@
           }
         }
       ]
-    }
   }
 }
