--- a/src/FacultyService/FacultyService.Api/appsettings.Development.json
+++ b/src/FacultyService/FacultyService.Api/appsettings.Development.json
@@ -102,7 +102,7 @@
       },
       {
         "Id": "DTVT",
-        "Identifier": "VT-FACULTY",
+        "Identifier": "TEL-FACULTY",
         "Name": "Điện Tử Viễn thông",
         "Location": {
           "Public": "https://localhost:30010",
