feat(tenant-management): implement tenant selection and context management in Academic UI
Signed-off-by: PNguyen <ngocphunguyenabc@gmail.com>

--- a/src/ApiGateway/appsettings.Docker.json
+++ b/src/ApiGateway/appsettings.Docker.json
@@ -1,18 +1,31 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://+:8080"
+      }
+    }
+  },
+  "KeyCloak": {
+    "Authority": "http://keycloak:8080/realms/dsms",
+    "Audience": "account",
+    "RequireHttpsMetadata": false
+  },
   "Finbuckle:MultiTenant:Stores:ConfigurationStore": {
     "Defaults": {
       "Location": {
         "Public": "",
         "Private": ""
-      },
+      }
+    },
       "Tenants": [
         {
           "Id": "CNTT",
           "Identifier": "IT-FACULTY",
           "Name": "Công Nghệ Thông Tin",
           "Location": {
-            "Public": "https://localhost:30000",
-            "Private": "https://localhost:30002"
+            "Public": "http://faculty-service-it:8080",
+            "Private": "http://faculty-service-it:8080"
           }
         },
         {
@@ -20,13 +33,10 @@
           "Identifier": "VT-FACULTY",
           "Name": "Điện Tử Viễn thông",
           "Location": {
-            "Public": "https://localhost:30010",
-            "Private": "https://localhost:30012"
+            "Public": "http://faculty-service-tel:8080",
+            "Private": "http://faculty-service-tel:8080"
           }
         }
       ]
-    },
-    "Tenants": {
-      "Default": ""
-    }
-  }}
+  }
+} 
