--- a/src/FacultyService/FacultyService.Api/appsettings.Docker.json
+++ b/src/FacultyService/FacultyService.Api/appsettings.Docker.json
@@ -29,7 +29,7 @@
         "Args": {
           "bootstrapMethod": "Failure",
           "nodes": [
-            "http://localhost:25300"
+            "http://elasticsearch:9200"
           ],
           "dataStream": "logs-dotnet-default"
         }
@@ -61,7 +61,9 @@
         "Name": "AtLevel",
         "Args": {
           "enrichFromLevel": "Error",
-          "configureEnricher": ["WithThreadName"]
+          "configureEnricher": [
+            "WithThreadName"
+          ]
         }
       }
     ],
@@ -76,8 +78,49 @@
       "ElasticSearch.Apm": "Debug"
     }
   },
-  "ConnectionStrings":{
-    "DefaultConnection": "Host=localhost;Port=25020;Database=dsmsdb;Username=coor;Password=coor;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=coordinator0;Port=5432;Database=dsmsdb;Username=coor;Password=coor;Timeout=300;CommandTimeout=300;"
   },
-  "AllowedHosts": "*"
-}
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://+:8080"
+      }
+    }
+  },
+  "Tenant": "IT-FACULTY",
+  "Finbuckle:MultiTenant:Stores:ConfigurationStore": {
+    "Defaults": {
+      "Location": {
+        "Public": "",
+        "Private": ""
+      }
+    },
+    "Tenants": [
+      {
+        "Id": "CNTT",
+        "Identifier": "IT-FACULTY",
+        "Name": "Công Nghệ Thông Tin",
+        "Location": {
+          "Public": "http://faculty-service-it:8080",
+          "Private": "http://faculty-service-it:8080"
+        }
+      },
+      {
+        "Id": "DTVT",
+        "Identifier": "TEL-FACULTY",
+        "Name": "Điện Tử Viễn thông",
+        "Location": {
+          "Public": "http://faculty-service-tel:8080",
+          "Private": "http://faculty-service-tel:8080"
+        }
+      }
+    ]
+  },
+  "KeyCloak": {
+    "Realm": "dsms",
+    "Username": "dsms_admin",
+    "Password": "dsms",
+    "Url": "http://keycloak:8080"
+  }
+} 
